--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -45,5 +45,6 @@
 }
 
 .updated{
-    color: white;
+    color: #666666;
+    font-size: 14px;
 }
